--- a/traefik/values.yaml
+++ b/traefik/values.yaml
@@ -6,7 +6,8 @@ ingressRoute:
 ports:
   traefik:
     port: 9000
-    expose: true
+    expose:
+      default: true
     exposedPort: 9000
     protocol: TCP
 
