--- a/traefik/values.yaml
+++ b/traefik/values.yaml
@@ -9,7 +9,7 @@ providers:
 certificatesResolvers:
   letsencrypt:
     acme:
-      caServer: https://acme-staging-v02.api.letsencrypt.org/directory
+      caServer: https://acme-v02.api.letsencrypt.org/directory
       email: kevin@coolkev.com
       storage: /data/acme.json
       dnsChallenge:
