--- a/traefik/values.yaml
+++ b/traefik/values.yaml
@@ -33,16 +33,20 @@ envFrom:
       name: traefik-route53-credentials
 
 deployment:
-  volumeMounts:
+  additionalVolumeMounts:
     - name: acme-storage
       mountPath: /data
-
-  volumes:
+  additionalVolumes:
     - name: acme-storage
       nfs:
         server: 10.60.1.15
         path: /data/services/acme
 
+persistence:
+  enabled: true
+  name: acme-storage
+  mountPath: /data
+  type: custom
 # Enable the dashboard
 
 api:
