--- a/home-sensors/timelapse-rs/service/ingress.yaml
+++ b/home-sensors/timelapse-rs/service/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: timelapse-service-rs
   namespace: home-sensors
   annotations:
+    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
     external-dns.alpha.kubernetes.io/hostname: timelapse.home.coolkev.com
 spec:
   ingressClassName: traefik
