--- a/traefik/ingress.yaml
+++ b/traefik/ingress.yaml
@@ -1,10 +1,12 @@
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  labels:
-    external-dns.alpha.kubernetes.io/hostname: traefik.home.coolkev.com
   name: traefik-dashboard-homelab
   namespace: traefik
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: traefik.home.coolkev.com
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
 spec:
   ingressClassName: traefik
   rules:
