--- a/traefik/values.yaml
+++ b/traefik/values.yaml
@@ -70,12 +70,14 @@ ingressRoute:
 ports:
   web:
     port: 80
-    expose: true
+    expose:
+      default: true
     exposedPort: 80
     protocol: TCP
   websecure:
     port: 443
-    expose: true
+    expose:
+      default: true
     exposedPort: 443
     protocol: TCP
   traefik:
