--- a/nginx-test/service.yaml
+++ b/nginx-test/service.yaml
@@ -22,6 +22,7 @@ metadata:
     external-dns.alpha.kubernetes.io/hostname: nginx-t.coolkev.com
 spec:
   rules:
+  - host: nginx-t.coolkev.com
   - http:
       paths:
       - path: /
