--- a/traefik/ingress.yaml
+++ b/traefik/ingress.yaml
@@ -1,21 +1,18 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
 metadata:
   name: traefik-dashboard-homelab
   namespace: traefik
   annotations:
     external-dns.alpha.kubernetes.io/hostname: traefik.home.coolkev.com
-    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
 spec:
-  ingressClassName: traefik
-  rules:
-    - host: traefik.home.coolkev.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: traefik
-                port:
-                  number: 9000
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`traefik.home.coolkev.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
+      kind: Rule
+      services:
+        - name: api@internal
+          kind: TraefikService
+  tls:
+    certResolver: letsencrypt
