--- a/nginx-test/service.yaml
+++ b/nginx-test/service.yaml
@@ -21,9 +21,10 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/hostname: nginx-t.coolkev.com
 spec:
+  ingressClassName: traefik
   rules:
   - host: nginx-t.coolkev.com
-  - http:
+    http:
       paths:
       - path: /
         pathType: Prefix
