--- a/traefik/http-redirect-ingress.yaml
+++ b/traefik/http-redirect-ingress.yaml
@@ -7,7 +7,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: HostRegexp(`{host:.+}`)
+    - match: PathPrefix(`/`)
       kind: Rule
       middlewares:
         - name: redirect-to-https
