--- a/jellyfin/deployment.yaml
+++ b/jellyfin/deployment.yaml
@@ -27,7 +27,7 @@ spec:
             - name: TZ
               value: "Etc/UTC"
             - name: JELLYFIN_PublishedServerUrl
-              value: "10.60.2.9"
+              value: "https://jellyfin.home.coolkev.com"
           ports:
             - containerPort: 1900
               protocol: UDP
