--- a/jellyfin/deployment.yaml
+++ b/jellyfin/deployment.yaml
@@ -6,6 +6,10 @@ metadata:
   labels:
     app: jellyfin
 spec:
+  strategy:
+    # Required because VictoriaMetrics in single-instance mode uses a locking
+    # strategy to prevent multiple instances from writing to the same storage
+    type: Recreate
   replicas: 1
   revisionHistoryLimit: 1
   selector:
