Fixup external-dns, it lost kube creds when I moved cicd since it was stealing the cicd creds

--- a/cluster-infra/external-dns.yaml
+++ b/cluster-infra/external-dns.yaml
@@ -16,7 +16,7 @@ spec:
       labels:
         app.kubernetes.io/name: external-dns
     spec:
-      serviceAccountName: cicd-operator # Piggyback on cicd-operator for now. Clean up later.
+      serviceAccountName: external-dns
       containers:
         - name: external-dns
           image: registry.k8s.io/external-dns/external-dns:v0.16.1
