See if we can get better jellyfin performance by forcing it to be on the NAS node

--- a/.deploy/jellyfin/deployment.yaml
+++ b/.deploy/jellyfin/deployment.yaml
@@ -59,3 +59,5 @@ spec:
           nfs:
             server: 10.60.1.15
             path: /data/mounts/tv
+      nodeSelector:
+        dedicated: nas
