--- a/.deploy/redis/deployment.yaml
+++ b/.deploy/redis/deployment.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis
+  namespace: redis
+  labels:
+    app: redis
 spec:
   replicas: 1
   selector:
