--- a/.deploy/redis/service.yaml
+++ b/.deploy/redis/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis
+  namespace: redis
   annotations:
     external-dns.alpha.kubernetes.io/hostname: redis.home.coolkev.com
 spec:
