--- a/.deploy/paperless/paperless-db-deployment.yaml
+++ b/.deploy/paperless/paperless-db-deployment.yaml
@@ -31,7 +31,7 @@ spec:
                   key: POSTGRES_PASSWORD
           volumeMounts:
             - name: pgdata
-              mountPath: /var/lib/postgresql/data
+              mountPath: /var/lib/postgresql
           readinessProbe:
             tcpSocket:
               port: 5432
